# essay-pipeline

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  README.md  pyproject.toml
.conductor/: active-handoff.md
.github/workflows/: ci.yml  daily-log.yml  essay-generation.yml  weekly-intelligence.yml
docs/: api-docs.md
docs/adr/: 003-template-library-licensing.md  004-stripe-checkout-license-bridge.md
docs/templates/: README.md
logs/agents/: opencode.json
src/: billing.py  dashboard.py  license.py  template_store.py
templates/: manifest.yaml
templates/free/: field-note.md
templates/premium/: announcement.md  argument-essay.md  case-study.md  sprint-retrospective.md  technical-deep-dive.md
tests/: test_billing.py  test_dashboard.py  test_e2e_pipeline.py  test_essay_drafter.py  test_license.py  test_schema_loader.py  test_template_store.py  test_validator.py
tests/fixtures/: category-taxonomy.yaml  frontmatter-schema.yaml  log-schema.yaml  quality-rubric.yaml  tag-governance.yaml
tests/fixtures/editorial/: category-taxonomy.yaml  frontmatter-schema.yaml  log-schema.yaml  quality-rubric.yaml  tag-governance.yaml
tests/fixtures/editorial/templates/: meta-system.md
tests/fixtures/templates/: meta-system.md
