[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "essay-pipeline"
version = "0.3.0"
description = "Frontmatter validator, essay indexer, topic suggester, sprint narrator, and LLM essay drafter for ORGAN-V public-process"
requires-python = ">=3.10"
dependencies = ["pyyaml>=6.0", "httpx>=0.27"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4.0"]

[project.scripts]
essay-validate = "src.validator:main"
essay-index = "src.indexer:main"
essay-suggest = "src.topic_suggester:main"
essay-narrate = "src.sprint_narrator:main"
log-generate = "src.log_generator:main"
essay-draft = "src.essay_drafter:main"
link-check = "src.link_checker:main"
essay-template = "src.template_store:main"
essay-license = "src.license:main"
essay-dashboard = "src.dashboard:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
